# mupen64-movie-parser

./: Cargo.toml  README.md
src/: controller.rs  error.rs  lib.rs  m64.rs  parser.rs  tests.rs
src/tests/: mod.rs
src/tests/m64s/: attempt1.m64  bitfs_noreds2.m64  invalid_movie_start_type.m64  invalid_reserved.m64  invalid_signature_2.m64  invalid_utf8.m64  not_enough_data.m64  not_enough_input_data.m64  super mario 64 16 star tas.m64  wrong_version.m64  wrong_version_not_enough_data.m64
test_files/: 1 kick 2 boxes.m64
