[package]
name = "mupen64-movie-parser"
version = "1.0.0"
authors = ["yuu0141 <eddio0141@gmail.com>"]
edition = "2021"
description = "A parser for Mupen64-rerecording movie files"
repository = "https://github.com/Eddio0141/mupen64-movie-parser"
license = "MIT"
keywords = ["mupen64", "TAS", "parser", "m64"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
arrayvec = "0.7.2"
thiserror = "1.0.30"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.19"
